--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fixitron - Your Home Repair Experts</title>
+    <title>Provo - Home Services On-Demand</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
         theme: {
           extend: {
             colors: {
-              primary: '#22d3ee', // cyan-400
-              background: '#0f172a', // slate-900
-              surface: '#1e293b',    // slate-800
-              textPrimary: '#f8fafc', // slate-50
-              textSecondary: '#94a3b8', // slate-400
+              primary: '#3b82f6', // blue-500
+              background: '#030712', // gray-950
+              surface: '#111827',    // gray-900
+              textPrimary: '#f9fafb', // gray-50
+              textSecondary: '#9ca3af', // gray-400
             },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
@@ -41,8 +41,8 @@
                     '100%': { opacity: '1' },
                 },
                 'glow': {
-                  '0%, 100%': { boxShadow: '0 0 5px #22d3ee, 0 0 8px #22d3ee' },
-                  '50%': { boxShadow: '0 0 15px #22d3ee, 0 0 20px #22d3ee' },
+                  '0%, 100%': { boxShadow: '0 0 5px #3b82f6, 0 0 8px #3b82f6' },
+                  '50%': { boxShadow: '0 0 15px #3b82f6, 0 0 20px #3b82f6' },
                 },
                 'pulse-subtle': {
                     '0%, 100%': { opacity: '1', transform: 'scale(1)' },
@@ -64,8 +64,8 @@
                   'to': { backgroundPosition: '-200% 0' },
                 },
                 'subtle-glow': {
-                    '0%, 100%': { filter: 'drop-shadow(0 0 3px rgba(34, 211, 238, 0.5))' },
-                    '50%': { filter: 'drop-shadow(0 0 8px rgba(34, 211, 238, 0.8))' },
+                    '0%, 100%': { filter: 'drop-shadow(0 0 3px rgba(59, 130, 246, 0.5))' },
+                    '50%': { filter: 'drop-shadow(0 0 8px rgba(59, 130, 246, 0.8))' },
                 },
             }
           }
