--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
+<script type="importmap">
+{
+  "imports": {
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0",
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
+    "react": "https://aistudiocdn.com/react@^19.2.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/"
+  }
+}
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Provo - Home Services On-Demand</title>
+    <title>Fixuno - Premium Home Services</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -25,11 +36,11 @@
                 'fade-in': 'fade-in 0.5s ease-out forwards',
                 'glow': 'glow 2.5s ease-in-out infinite',
                 'pulse-subtle': 'pulse-subtle 2s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-                'scale-up-fade-in': 'scale-up-fade-in 0.5s ease-out forwards',
+                'scale-up-fade-in': 'scale-up-fade-in 0.4s ease-out forwards',
                 'draw': 'draw 0.8s ease-out forwards',
-                'glow-success': 'glow-success 2s ease-in-out infinite',
                 'shine': 'shine 3s linear infinite',
-                'subtle-glow': 'subtle-glow 2.5s ease-in-out infinite',
+                'subtle-glow': 'subtle-glow 3s ease-in-out infinite',
+                'glow-success': 'glow-success 2s ease-in-out infinite'
             },
             keyframes: {
                 'slide-in-up': {
@@ -41,61 +52,59 @@
                     '100%': { opacity: '1' },
                 },
                 'glow': {
-                  '0%, 100%': { boxShadow: '0 0 5px #3b82f6, 0 0 8px #3b82f6' },
-                  '50%': { boxShadow: '0 0 15px #3b82f6, 0 0 20px #3b82f6' },
+                    '0%, 100%': { boxShadow: '0 0 5px rgba(59, 130, 246, 0.5)' },
+                    '50%': { boxShadow: '0 0 20px rgba(59, 130, 246, 0.8)' },
                 },
                 'pulse-subtle': {
-                    '0%, 100%': { opacity: '1', transform: 'scale(1)' },
-                    '50%': { opacity: '0.9', transform: 'scale(1.05)' },
+                    '0%, 100%': { opacity: '1' },
+                    '50%': { opacity: '0.7' },
                 },
                 'scale-up-fade-in': {
-                    '0%': { transform: 'scale(0.8)', opacity: '0' },
+                    '0%': { transform: 'scale(0.9)', opacity: '0' },
                     '100%': { transform: 'scale(1)', opacity: '1' },
                 },
                 'draw': {
-                    'to': { strokeDashoffset: 0 },
-                },
-                'glow-success': {
-                  '0%, 100%': { boxShadow: '0 0 8px #4ade80, 0 0 12px #4ade80' },
-                  '50%': { boxShadow: '0 0 20px #4ade80, 0 0 25px #4ade80' },
+                  'to': { strokeDashoffset: '0' }
                 },
                 'shine': {
-                  'from': { backgroundPosition: '200% 0' },
-                  'to': { backgroundPosition: '-200% 0' },
+                  '0%': { backgroundPosition: '200% center' },
+                  '100%': { backgroundPosition: '-200% center' }
                 },
                 'subtle-glow': {
-                    '0%, 100%': { filter: 'drop-shadow(0 0 3px rgba(59, 130, 246, 0.5))' },
-                    '50%': { filter: 'drop-shadow(0 0 8px rgba(59, 130, 246, 0.8))' },
+                   '0%, 100%': { textShadow: '0 0 0px rgba(59, 130, 246, 0)' },
+                   '50%': { textShadow: '0 0 10px rgba(59, 130, 246, 0.5)' }
                 },
-            }
-          }
-        }
-      }
+                'glow-success': {
+                    '0%, 100%': { boxShadow: '0 0 10px rgba(74, 222, 128, 0.2)' },
+                    '50%': { boxShadow: '0 0 25px rgba(74, 222, 128, 0.5)' },
+                }
+            },
+          },
+        },
+      };
     </script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <script type="importmap">
-{
-  "imports": {
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.27.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
-  }
-}
-</script>
-<style>
-body {
-  background-image:
-    linear-gradient(rgba(255, 255, 255, 0.03) 1px, transparent 1px),
-    linear-gradient(90deg, rgba(255, 255, 255, 0.03) 1px, transparent 1px);
-  background-size: 2rem 2rem;
-}
-</style>
-</head>
-  <body class="bg-background font-sans">
+    <style>
+      body {
+        font-family: 'Inter', sans-serif;
+        scroll-behavior: smooth;
+      }
+      /* Custom Scrollbar */
+      ::-webkit-scrollbar {
+        width: 8px;
+      }
+      ::-webkit-scrollbar-track {
+        background: #111827;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #374151;
+        border-radius: 4px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #3b82f6;
+      }
+    </style>
+  </head>
+  <body>
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
