--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 'draw': 'draw 0.8s ease-out forwards',
                 'shine': 'shine 3s linear infinite',
                 'subtle-glow': 'subtle-glow 3s ease-in-out infinite',
-                'glow-success': 'glow-success 2s ease-in-out infinite'
+                'glow-success': 'glow-success 2s ease-in-out infinite',
+                'spin-slow': 'spin 3s linear infinite'
             },
             keyframes: {
                 'slide-in-up': {
