--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0",
         "react/": "https://aistudiocdn.com/react@^19.2.1/",
         "react": "https://aistudiocdn.com/react@^19.2.1",
-        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/"
+        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+        "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.1/client"
       }
     }
     </script>
@@ -109,5 +110,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
